--- a/about.html
+++ b/about.html
@@ -430,7 +430,7 @@
     <div class="container">
       <div class="logo">
         <a href="index.html">
-          <h1>SPIN Lab</h1>
+          <h1>中科大空间智能实验室 SPIN Lab </h1>
         </a>
       </div>
       <div class="nav-right">
@@ -461,7 +461,8 @@
         <div class="about-text">
           <h2>关于SPIN Lab</h2>
           <p>
-            SPIN Lab（Spatial Intelligence Laboratory）成立于2025年，是中国科学技术大学人工智能领域的重要研究团队。实验室聚焦于人工智能（AI）与具身智能的前沿研究，致力于探索能够在物理世界中感知、决策并执行复杂任务的智能体理论与技术。
+            SPIN Lab（Spatial Intelligence
+            Laboratory）成立于2025年，是中国科学技术大学人工智能领域的重要研究团队。实验室聚焦于人工智能（AI）与具身智能的前沿研究，致力于探索能够在物理世界中感知、决策并执行复杂任务的智能体理论与技术。
           </p>
           <p>
             实验室依托中国科学技术大学人工智能与数据科学学院，汇聚了由夏彦预聘副教授领衔的跨学科团队，成员涵盖计算机视觉、机器人学、强化学习、机械工程等领域的研究者与开发者。我们以"让智能体真正理解并作用于物理世界"为使命，注重理论创新与硬件落地结合。
@@ -477,243 +478,6 @@
     </div>
   </section>
 
-  <!-- 研究方向部分 -->
-  <!-- <section id="research-areas" class="research-section">
-    <div class="container">
-      <h2 class="section-title" style="text-align: center; margin-bottom: 3rem; font-size: 2rem;">核心研究方向</h2>
-    </div>
-  </section> -->
-
-  <!-- 生成式具身智能 -->
-  <!-- <section id="generative" class="research-section">
-    <div class="container">
-      <div class="research-container">
-        <div class="research-content">
-          <h2>生成式具身智能</h2>
-          <p>生成式具身智能是我们实验室的核心研究方向之一，它结合了生成模型与传统具身智能的优势，能够生成个性化的内容推荐，提升用户体验和推荐多样性。</p>
-          <p>通过深度学习和生成模型（如变分自编码器、生成对抗网络和大型语言模型），我们的研究旨在解决传统具身智能中的冷启动问题、数据稀疏性问题，以及推荐多样性不足等挑战。</p>
-
-          <div class="key-points">
-            <h3>核心研究内容</h3>
-            <ul>
-              <li>基于大型语言模型的对话式具身智能</li>
-              <li>生成模型增强的协同过滤算法</li>
-              <li>多模态内容生成与推荐</li>
-              <li>个性化文本生成推荐</li>
-              <li>生成式具身智能的可解释性</li>
-            </ul>
-          </div>
-
-          <div class="publication-highlight">
-            <h3>代表性论文</h3>
-            <p>"PersonaLLM: 整合人格特征的大型语言模型推荐框架"</p>
-            <p class="authors">张三, 李四, 王五, 赵六</p>
-            <p class="venue">ICLR 2023</p>
-            <div class="publication-links">
-              <a href="#"><i class="fas fa-file-pdf"></i> 论文PDF</a>
-              <a href="#"><i class="fab fa-github"></i> 代码实现</a>
-            </div>
-          </div>
-
-          <div class="tag-list">
-            <span class="tag">生成式模型</span>
-            <span class="tag">深度学习</span>
-            <span class="tag">个性化推荐</span>
-            <span class="tag">大语言模型</span>
-          </div>
-        </div>
-        <div class="research-image">
-          <img src="images/generative-recsys.jpg" alt="生成式具身智能">
-        </div>
-      </div>
-    </div>
-  </section> -->
-
-  <!-- 公平具身智能 -->
-  <!-- <section id="fairness" class="research-section">
-    <div class="container">
-      <div class="research-container">
-        <div class="research-content">
-          <h2>公平具身智能</h2>
-          <p>随着人工智能技术在具身智能中的广泛应用，算法公平性已成为一个日益重要的研究课题。我们的研究聚焦于设计和开发更加公平、无歧视的推荐技术，平衡不同群体的利益。</p>
-          <p>我们从多角度研究具身智能中的公平性问题，包括用户公平、物品公平以及提供者公平等，致力于减轻算法偏见对用户体验和社会价值的负面影响。</p>
-
-          <div class="key-points">
-            <h3>核心研究内容</h3>
-            <ul>
-              <li>公平性指标的设计与评估</li>
-              <li>无偏数据收集与建模方法</li>
-              <li>多目标优化的公平推荐框架</li>
-              <li>群体公平与个体公平平衡机制</li>
-              <li>公平与准确性权衡的理论基础</li>
-            </ul>
-          </div>
-
-          <div class="publication-highlight">
-            <h3>代表性论文</h3>
-            <p>"FairRec: 基于对抗学习的多维公平推荐框架"</p>
-            <p class="authors">李四, 张三, 王五</p>
-            <p class="venue">NeurIPS 2022</p>
-            <div class="publication-links">
-              <a href="#"><i class="fas fa-file-pdf"></i> 论文PDF</a>
-              <a href="#"><i class="fab fa-github"></i> 代码实现</a>
-            </div>
-          </div>
-
-          <div class="tag-list">
-            <span class="tag">算法公平性</span>
-            <span class="tag">对抗学习</span>
-            <span class="tag">偏见缓解</span>
-            <span class="tag">伦理AI</span>
-          </div>
-        </div>
-        <div class="research-image">
-          <img src="images/fairness-recsys.jpg" alt="公平具身智能">
-        </div>
-      </div>
-    </div>
-  </section> -->
-
-  <!-- 因果具身智能 -->
-  <!-- <section id="causal" class="research-section">
-    <div class="container">
-      <div class="research-container">
-        <div class="research-content">
-          <h2>因果具身智能</h2>
-          <p>传统的基于相关性的具身智能在处理数据偏差和用户反馈循环方面存在固有局限。我们实验室的因果具身智能研究方向致力于应用因果推断方法，解决具身智能中的选择偏差、反事实推理和干预效应估计等问题。</p>
-          <p>通过因果推断框架，我们能够区分关联与因果关系，改进推荐结果的质量和稳健性，同时为推荐决策提供更可靠的解释。</p>
-
-          <div class="key-points">
-            <h3>核心研究内容</h3>
-            <ul>
-              <li>基于因果图的具身智能建模</li>
-              <li>反事实推理增强的用户偏好学习</li>
-              <li>去偏策略优化与评估</li>
-              <li>因果表示学习在推荐中的应用</li>
-              <li>因果发现与具身智能的结合</li>
-            </ul>
-          </div>
-
-          <div class="publication-highlight">
-            <h3>代表性论文</h3>
-            <p>"CausalRec: 基于结构化因果模型的反事实推荐框架"</p>
-            <p class="authors">王五, 张三, 李四</p>
-            <p class="venue">SIGIR 2022</p>
-            <div class="publication-links">
-              <a href="#"><i class="fas fa-file-pdf"></i> 论文PDF</a>
-              <a href="#"><i class="fab fa-github"></i> 代码实现</a>
-            </div>
-          </div>
-
-          <div class="tag-list">
-            <span class="tag">因果推断</span>
-            <span class="tag">反事实推理</span>
-            <span class="tag">选择偏差</span>
-            <span class="tag">干预效应</span>
-          </div>
-        </div>
-        <div class="research-image">
-          <img src="images/causal-recsys.jpg" alt="因果具身智能">
-        </div>
-      </div>
-    </div>
-  </section> -->
-
-  <!-- 图神经网络 -->
-  <!-- <section id="gnn" class="research-section">
-    <div class="container">
-      <div class="research-container">
-        <div class="research-content">
-          <h2>图神经网络</h2>
-          <p>在具身智能中，用户与物品之间的交互自然形成图结构，图神经网络（GNN）为建模这些复杂关系提供了强大的工具。我们的研究探索图神经网络在社交推荐和知识图谱增强推荐中的应用。</p>
-          <p>通过捕捉图中的高阶连接模式和局部结构特征，我们开发的GNN模型能够更好地表示用户偏好和物品特性，提升具身智能的性能和可解释性。</p>
-
-          <div class="key-points">
-            <h3>核心研究内容</h3>
-            <ul>
-              <li>异构图神经网络的推荐模型</li>
-              <li>基于知识图谱的推荐增强</li>
-              <li>社交网络感知的图卷积推荐</li>
-              <li>图自监督学习在推荐中的应用</li>
-              <li>高效大规模图具身智能</li>
-            </ul>
-          </div>
-
-          <div class="publication-highlight">
-            <h3>代表性论文</h3>
-            <p>"GraphRec+: 自适应注意力图神经网络社交推荐框架"</p>
-            <p class="authors">赵六, 王五, 张三, 李四</p>
-            <p class="venue">KDD 2022</p>
-            <div class="publication-links">
-              <a href="#"><i class="fas fa-file-pdf"></i> 论文PDF</a>
-              <a href="#"><i class="fab fa-github"></i> 代码实现</a>
-            </div>
-          </div>
-
-          <div class="tag-list">
-            <span class="tag">图神经网络</span>
-            <span class="tag">社交推荐</span>
-            <span class="tag">知识图谱</span>
-            <span class="tag">图结构学习</span>
-          </div>
-        </div>
-        <div class="research-image">
-          <img src="images/gnn-recsys.jpg" alt="图神经网络">
-        </div>
-      </div>
-    </div>
-  </section> -->
-
-  <!-- 发展历程 -->
-  <!-- <section class="milestone-section">
-    <div class="container">
-      <h2 class="section-title">发展历程</h2>
-      <div class="timeline">
-        <div class="milestone">
-          <div class="milestone-content">
-            <div class="milestone-year">2018年</div>
-            <h3>实验室成立</h3>
-            <p>由夏彦教授领导，SPIN Lab正式成立，开始专注于具身智能和空间认知研究。</p>
-          </div>
-        </div>
-        <div class="milestone">
-          <div class="milestone-content">
-            <div class="milestone-year">2019年</div>
-            <h3>团队扩展</h3>
-            <p>招收首批博士生和硕士生，建立核心研究团队，开始产出高质量研究成果。</p>
-          </div>
-        </div>
-        <div class="milestone">
-          <div class="milestone-content">
-            <div class="milestone-year">2020年</div>
-            <h3>国际合作</h3>
-            <p>与牛津大学、斯坦福大学等国际知名院校建立合作关系，开展联合研究项目。</p>
-          </div>
-        </div>
-        <div class="milestone">
-          <div class="milestone-content">
-            <div class="milestone-year">2021年</div>
-            <h3>突破性进展</h3>
-            <p>在计算机视觉和机器人学领域取得重要突破，多篇论文发表在顶级会议。</p>
-          </div>
-        </div>
-        <div class="milestone">
-          <div class="milestone-content">
-            <div class="milestone-year">2022年</div>
-            <h3>产业合作</h3>
-            <p>与多家知名企业建立合作关系，推动技术转化和产业化应用。</p>
-          </div>
-        </div>
-        <div class="milestone">
-          <div class="milestone-content">
-            <div class="milestone-year">2023年</div>
-            <h3>学术影响力</h3>
-            <p>在CVPR、ICCV、ECCV等国际顶级会议发表多篇高影响力论文，学术声誉进一步提升。</p>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section> -->
 
   <!-- 使命与愿景 -->
   <section class="mission-section">
@@ -750,7 +514,7 @@
     <div class="container">
       <div class="about-content">
         <div class="about-image">
-          <img src="images/about-2.jpg" alt="研究环境">
+          <img src="images/shiyanshi2.jpg" alt="研究环境">
         </div>
         <div class="about-text">
           <h2>研究理念</h2>
@@ -763,7 +527,7 @@
   </section>
 
   <!-- 合作伙伴 -->
-  <section class="partner-section">
+  <!-- <section class="partner-section">
     <div class="container">
       <h2 class="section-title">合作伙伴</h2>
       <div class="partner-logos">
@@ -775,7 +539,7 @@
         <img src="images/partner-6.png" alt="合作伙伴" class="partner-logo">
       </div>
     </div>
-  </section>
+  </section> -->
 
   <!-- 页脚 -->
   <footer class="footer">
