--- a/index.html
+++ b/index.html
@@ -52,7 +52,8 @@
           <div class="slide-content">
             <h2>欢迎访问SPIN Lab</h2>
             <p>
-              中科大空间智能实验室（SPatial INtelligence Lab）专注于空间智能、三维视觉、自主机器人以及多模态感知等前沿方向的研究。我们致力于赋予智能体在复杂三维环境中的感知、理解与交互能力，尤其关注在GNSS信号不可用或失效场景中的定位与导航问题。实验室研究涵盖激光雷达点云定位与建图、多模态融合学习、视觉语言导航、以及具身智能系统的构建。团队注重理论与应用结合，积极与国际知名高校和产业界合作，推动空间智能在机器人与人工智能领域的落地与发展。
+              中科大空间智能实验室（SPatial INtelligence
+              Lab）专注于空间智能、三维视觉、自主机器人以及多模态感知等前沿方向的研究。我们致力于赋予智能体在复杂三维环境中的感知、理解与交互能力，尤其关注在GNSS信号不可用或失效场景中的定位与导航问题。实验室研究涵盖激光雷达点云定位与建图、多模态融合学习、视觉语言导航、以及具身智能系统的构建。团队注重理论与应用结合，积极与国际知名高校和产业界合作，推动空间智能在机器人与人工智能领域的落地与发展。
             </p>
             <a href="about.html" class="btn">了解更多</a>
           </div>
@@ -99,23 +100,23 @@
       <div class="news-grid">
         <div class="news-item featured">
           <div class="news-image">
-            <img src="images/news.jpg" alt="新闻动态">
+            <img src="images/sparasealign.png" alt="新闻动态">
             <div class="news-date">
               <span class="day">15</span>
               <span class="month">6月</span>
-              <span class="year">2023</span>
+              <span class="year">2025</span>
             </div>
           </div>
           <div class="news-content">
             <span class="badge">重要通知</span>
-            <h3>我们的论文被ICLR 2023接收</h3>
-            <p>恭喜团队成员在生成式具身智能领域的研究成果被ICLR 2023会议接收！</p>
-            <a href="news-detail.html" class="read-more">阅读更多 <i class="fas fa-arrow-right"></i></a>
+            <h3>我们的论文被CVPR 2025接收</h3>
+            <p>恭喜团队成员在协同目标检测领域的研究成果被CVPR 2025会议接收！</p>
+            <a href="publications.html" class="read-more">阅读更多 <i class="fas fa-arrow-right"></i></a>
           </div>
         </div>
         <div class="news-item">
           <div class="news-image">
-            <img src="images/news.jpg" alt="新闻动态">
+            <img src="images/tex2loc.png" alt="新闻动态">
             <div class="news-date">
               <span class="day">10</span>
               <span class="month">5月</span>
@@ -123,10 +124,10 @@
             </div>
           </div>
           <div class="news-content">
-            <span class="badge">学术活动</span>
-            <h3>实验室成功举办学术研讨会</h3>
-            <p>我们实验室成功举办了"前沿具身智能技术"专题研讨会，多位专家学者参与...</p>
-            <a href="news-detail.html" class="read-more">阅读更多 <i class="fas fa-arrow-right"></i></a>
+            <span class="badge">重要通知</span>
+            <h3>我们的论文被CVPR 2025接收</h3>
+            <p>恭喜团队成员在3D点云定位领域的研究成果被CVPR 2024会议接收！</p>
+            <a href="publications.html" class="read-more">阅读更多 <i class="fas fa-arrow-right"></i></a>
           </div>
         </div>
         <div class="news-item">
@@ -139,10 +140,10 @@
             </div>
           </div>
           <div class="news-content">
-            <span class="badge">项目进展</span>
-            <h3>国家自然科学基金项目启动</h3>
-            <p>我们的"基于因果推断的公平具身智能"国家自然科学基金项目正式启动...</p>
-            <a href="news-detail.html" class="read-more">阅读更多 <i class="fas fa-arrow-right"></i></a>
+            <span class="badge">学术活动</span>
+            <h3>实验室成功举办学术研讨会</h3>
+            <p>我们实验室成功举办了"前沿具身智能技术"专题研讨会，多位相关学者参与...</p>
+            <a href="publications.html" class="read-more">阅读更多 <i class="fas fa-arrow-right"></i></a>
           </div>
         </div>
       </div>
@@ -161,32 +162,34 @@
           <div class="area-icon">
             <i class="fas fa-robot"></i>
           </div>
-          <h3>生成式具身智能</h3>
-          <p>结合生成模型与具身智能，研究个性化内容生成与推荐的创新方法。</p>
+          <h3>智能体感知与环境理解</h3>
+          <p>
+            聚焦多模态感知技术（视觉 / 听觉 / 触觉），研究智能体对复杂环境中物体、场景的精准识别与动态理解，构建高精度语义地图，强化自主感知与空间定位能力。
+          </p>
           <a href="about.html#generative" class="read-more">了解更多 <i class="fas fa-arrow-right"></i></a>
         </div>
         <div class="area-card">
           <div class="area-icon">
             <i class="fas fa-balance-scale"></i>
           </div>
-          <h3>公平具身智能</h3>
-          <p>研究具身智能中的公平性问题，致力于减轻算法偏见，提升推荐结果的公平性。</p>
+          <h3>智能体决策与规划</h3>
+          <p>基于强化学习与认知推理，开发长时序决策算法，探索智能体对任务语义的分解能力、多步规划策略及动态环境下的实时策略调整机制。</p>
           <a href="about.html#fairness" class="read-more">了解更多 <i class="fas fa-arrow-right"></i></a>
         </div>
         <div class="area-card">
           <div class="area-icon">
             <i class="fas fa-link"></i>
           </div>
-          <h3>因果具身智能</h3>
-          <p>应用因果推断方法解决具身智能中的偏差问题，提升推荐质量和解释性。</p>
+          <h3>智能体运动控制与执行</h3>
+          <p>结合机器人动力学与机械结构优化，研究高精度运动控制算法（力控 / 协作控制），实现智能体在复杂场景中的灵活移动、物体操作及人机安全交互。</p>
           <a href="about.html#causal" class="read-more">了解更多 <i class="fas fa-arrow-right"></i></a>
         </div>
         <div class="area-card">
           <div class="area-icon">
             <i class="fas fa-project-diagram"></i>
           </div>
-          <h3>图神经网络</h3>
-          <p>利用图神经网络建模复杂关系，应用于社交推荐和知识图谱增强推荐。</p>
+          <h3>多智能体协同与交互</h3>
+          <p>构建多智能体通信协议与协作策略，研究群体任务分配、冲突解决机制及自然人机交互技术，提升多主体系统的协同效率与人机协作体验。。</p>
           <a href="about.html#gnn" class="read-more">了解更多 <i class="fas fa-arrow-right"></i></a>
         </div>
       </div>
@@ -208,50 +211,52 @@
             <ul class="publication-list">
               <li>
                 <div class="pub-info">
-                  <span class="pub-venue">ICLR 2023</span>
-                  <h4>生成式具身智能的新方法与应用</h4>
-                  <p class="pub-authors">张三, 李四, 王五, 赵六</p>
+                  <span class="pub-venue">CVPR 2025</span>
+                  <h4>SparseAlign: A Fully Sparse Framework for Cooperative Object Detection</h4>
+                  <p class="pub-authors">Yunshuang Yuan, Yan Xia†, Daniel Cremers, Monika Sester</p>
                   <div class="pub-links">
-                    <a href="#" class="pub-link"><i class="fas fa-file-pdf"></i> PDF</a>
+                    <a href="https://arxiv.org/pdf/2503.12982" class="pub-link"><i class="fas fa-file-pdf"></i> PDF</a>
                     <a href="#" class="pub-link"><i class="fab fa-github"></i> 代码</a>
                     <a href="#" class="pub-link"><i class="fas fa-external-link-alt"></i> DOI</a>
                   </div>
                 </div>
                 <div class="pub-tags">
-                  <span class="tag">生成式模型</span>
-                  <span class="tag">具身智能</span>
+                  <span class="tag">Cooperative Object Detection</span>
+                  <span class="tag">Fully Sparse Framework</span>
+
                 </div>
               </li>
               <li>
                 <div class="pub-info">
-                  <span class="pub-venue">NeurIPS 2022</span>
-                  <h4>基于因果推断的公平推荐方法研究</h4>
-                  <p class="pub-authors">李四, 张三, 王五</p>
+                  <span class="pub-venue">CVPR 2025</span>
+                  <h4>Localizing Events in Videos with Multimodal Queries.</h4>
+                  <p class="pub-authors">Gengyuan Zhang, Mang Ling Ada Fok, Jialu Ma, Yan Xia†, Daniel Cremers, Philip
+                    Torr, Volker Tresp, Jindong Gu. </p>
                   <div class="pub-links">
-                    <a href="#" class="pub-link"><i class="fas fa-file-pdf"></i> PDF</a>
+                    <a href="https://arxiv.org/pdf/2406.10079" class="pub-link"><i class="fas fa-file-pdf"></i> PDF</a>
                     <a href="#" class="pub-link"><i class="fab fa-github"></i> 代码</a>
                     <a href="#" class="pub-link"><i class="fas fa-external-link-alt"></i> DOI</a>
                   </div>
                 </div>
                 <div class="pub-tags">
-                  <span class="tag">因果推断</span>
-                  <span class="tag">公平性</span>
+                  <span class="tag">Multimodal Queries (MQs)</span>
+                  <span class="tag">Video Event Localization</span>
                 </div>
               </li>
               <li>
                 <div class="pub-info">
-                  <span class="pub-venue">KDD 2022</span>
-                  <h4>图神经网络在社交推荐中的应用</h4>
-                  <p class="pub-authors">王五, 张三, 李四, 赵六</p>
+                  <span class="pub-venue">CVPR 2024</span>
+                  <h4>Text2Loc: 3D Point Cloud Localization from Natural Language</h4>
+                  <p class="pub-authors">Yan Xia*†, Letian Shi*, Zifeng Ding, João F. Henriques, Daniel Cremers</p>
                   <div class="pub-links">
-                    <a href="#" class="pub-link"><i class="fas fa-file-pdf"></i> PDF</a>
+                    <a href="https://arxiv.org/pdf/2311.15977" class="pub-link"><i class="fas fa-file-pdf"></i> PDF</a>
                     <a href="#" class="pub-link"><i class="fab fa-github"></i> 代码</a>
                     <a href="#" class="pub-link"><i class="fas fa-external-link-alt"></i> DOI</a>
                   </div>
                 </div>
                 <div class="pub-tags">
-                  <span class="tag">图神经网络</span>
-                  <span class="tag">社交推荐</span>
+                  <span class="tag">3D Point Cloud Localization</span>
+                  <span class="tag">hierarchical transformer</span>
                 </div>
               </li>
             </ul>
@@ -406,7 +411,7 @@
         </div>
       </div>
       <div class="footer-bottom">
-        <p>&copy; 2023 SPIN Lab. 保留所有权利.</p>
+        <p>&copy; 2025 SPIN Lab. 保留所有权利.</p>
       </div>
     </div>
   </footer>
