--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <div class="slide">
           <div class="slide-content">
             <h2>重大研究成果</h2>
-            <p>实验室的核心研究方向包括：多模态感知与环境建模、具身智能体决策机制、人机协作与物理交互、具身智能应用场景开发，智能家居服务、工业自动化、机器人导航与控制等。</p>
+            <p>实验室的核心研究方向包括：3D定位与建图、多模态感知、自主机器人的空间导航与理解、人机协作与物理交互，服务应用于智能家居、智能制造、无人驾驶等场景。</p>
             <a href="publications.html" class="btn">查看论文</a>
           </div>
           <div class="slide-image">
@@ -73,8 +73,8 @@
         <div class="slide">
           <div class="slide-content">
             <h2>招募优秀人才</h2>
-            <p>我们以 "让智能体真正理解并作用于物理世界"为使命，注重理论创新与硬件落地结合 ，拥有先进的实验平台和开源生态）。
-              并欢迎企业与学界以联合研发、技术咨询等形式开展合作，共同推动具身智能从实验室走向真实世界。欢迎有志于机器人学 / 人工智能方向优秀的本科、硕士、博士生，加入我们的团队</p>
+            <p>我们以 "Empowering 3D Intelligence for the Autonomous World"为使命，注重理论创新与硬件落地结合 ，拥有先进的实验平台和开源生态。
+              欢迎企业与学界以联合研发、技术咨询等形式开展合作，共同推动具身智能从实验室走向真实世界。欢迎有志于空间智能、机器人方向的优秀本科、硕士、博士生、博士后，加入我们的团队</p>
             <a href="admission.html" class="btn">招生详情</a>
           </div>
           <div class="slide-image">
